--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake git pkg-config libssl-dev docker.io
+          sudo apt-get install -y build-essential cmake git curl pkg-config libssl-dev
 
       - name: Build liboqs + oqs-provider
         run: |
