--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -71,8 +71,10 @@ jobs:
 
       - name: Install deps
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential cmake git curl pkg-config libssl-dev
+          sudo apt-get clean
+          sudo rm -rf /var/lib/apt/lists/*
+          sudo apt-get update --fix-missing
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \ build-essential cmake git curl pkg-config libssl-dev
 
       - name: Build liboqs + oqs-provider
         run: |
