--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -8,13 +8,18 @@ on:
 jobs:
   sign-artifact:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install deps
+      - name: Install dependencies (container-safe)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential cmake git pkg-config libssl-dev docker.io curl
+          apt-get clean
+          apt-get update
+          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+          build-essential cmake git curl pkg-config libssl-dev ca-certificates
+
 
       - name: Build liboqs
         run: |
