--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -15,9 +15,10 @@ jobs:
 
       - name: Install dependencies (container-safe)
         run: |
-          apt-get clean
-          apt-get update
-          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+          sudo apt-get clean
+          sudo apt-get update
+          DEBIAN_FRONTEND=noninteractive 
+          sudo apt-get install -y --no-install-recommends \
           build-essential cmake git curl pkg-config libssl-dev ca-certificates
 
 
