--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -15,10 +15,10 @@ jobs:
 
       - name: Install dependencies (container-safe)
         run: |
-          sudo apt-get clean
-          sudo apt-get update
+          apt-get clean
+          apt-get update
           DEBIAN_FRONTEND=noninteractive 
-          sudo apt-get install -y --no-install-recommends \
+          apt-get install -y --no-install-recommends \
           build-essential cmake git curl pkg-config libssl-dev ca-certificates
 
 
