--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -27,14 +27,14 @@ jobs:
           git clone https://github.com/open-quantum-safe/liboqs.git
           cd liboqs && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DOQS_USE_OPENSSL=OFF ..
-          make -j2 && sudo make install
+          make -j2 &&  make install
 
       - name: Build oqs-provider
         run: |
           git clone https://github.com/open-quantum-safe/oqs-provider.git
           cd oqs-provider && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          make -j2 && sudo make install
+          make -j2 &&  make install
 
       - name: Prepare OpenSSL config
         run: |
@@ -77,12 +77,12 @@ jobs:
 
       - name: Install deps
         run: |
-          sudo apt-get clean
-          sudo rm -rf /var/lib/apt/lists/*
-          sudo apt-get update --fix-missing
-          sudo apt-get remove -y containerd.io containerd || true
-          sudo apt-mark hold containerd docker-ce docker-ce-cli || true
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \  
+          apt-get clean
+          rm -rf /var/lib/apt/lists/*
+          apt-get update --fix-missing
+          apt-get remove -y containerd.io containerd || true
+          apt-mark hold containerd docker-ce docker-ce-cli || true
+          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \  
           build-essential cmake git curl pkg-config libssl-dev
 
       - name: Build liboqs + oqs-provider
@@ -90,12 +90,12 @@ jobs:
           git clone https://github.com/open-quantum-safe/liboqs.git
           cd liboqs && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DOQS_USE_OPENSSL=OFF ..
-          make -j2 && sudo make install
+          make -j2 &&  make install
           cd ../..
           git clone https://github.com/open-quantum-safe/oqs-provider.git
           cd oqs-provider && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          make -j2 && sudo make install
+          make -j2 &&  make install
 
       - name: Prepare OpenSSL config
         run: |
