--- a/.github/workflows/secure-ci.yml
+++ b/.github/workflows/secure-ci.yml
@@ -71,33 +71,27 @@ jobs:
 
   docker-image-sign:
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:22.04
     needs: sign-artifact
     steps:
       - uses: actions/checkout@v4
 
       - name: Install deps
         run: |
-          apt-get clean
-          rm -rf /var/lib/apt/lists/*
-          apt-get update --fix-missing
-          apt-get remove -y containerd.io containerd || true
-          apt-mark hold containerd docker-ce docker-ce-cli || true
-          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \  
-          build-essential cmake git curl pkg-config libssl-dev
+          sudo apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+            build-essential cmake git curl pkg-config libssl-dev ca-certificates
 
       - name: Build liboqs + oqs-provider
         run: |
           git clone https://github.com/open-quantum-safe/liboqs.git
           cd liboqs && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DOQS_USE_OPENSSL=OFF ..
-          make -j2 &&  make install
+          make -j2 && sudo make install
           cd ../..
           git clone https://github.com/open-quantum-safe/oqs-provider.git
           cd oqs-provider && mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          make -j2 &&  make install
+          make -j2 && sudo make install
 
       - name: Prepare OpenSSL config
         run: |
